<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanche"
    android:padding="10dp"
    tools:context=".OnBoardingActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/skip_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:drawableEnd="@drawable/skip_icon"
        android:drawableTint="@color/colorPrimaryDark"
        android:onClick="skip"
        android:textAllCaps="false"
        android:padding="10dp"
        android:text="@string/skip_btn"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/get_started_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/rectangle_white"
            android:text="@string/let_get_started"
            android:textAllCaps="false"
            android:visibility="invisible"
            android:textColor="@color/colorBlanche"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:visibility="visible" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:textColor="@color/colorBlanche"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="15sp"
            android:background="@drawable/rectangle_white"
            android:drawableEnd="@drawable/chevron_right"
            android:text="@string/next_btn"
            android:onClick="next"
            android:textAllCaps="false"
            android:visibility="visible" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>