<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.VbgFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/th_matiques"
                android:textSize="30sp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_marginTop="70sp"/>

        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:id="@+id/line_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_vbg_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:text="@string/tout_savoir_sur_le_vbg"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="150sp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:id="@+id/line_police"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_police" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:text="@string/contacter_la_police"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="25dp"
                app:cardCornerRadius="10dp"
                android:layout_below="@id/card1"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:id="@+id/line_centre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_loc_hop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:text="@string/localiser_un_centre_de_sant"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/card2"
                app:cardCornerRadius="10dp"
                android:layout_marginTop="25dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <LinearLayout
                    android:id="@+id/line_justice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/ic_juridique" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/coin_du_juriste"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>
        
    </LinearLayout>
    
</androidx.core.widget.NestedScrollView>